1. 去除快照模式无用的代码判断。 2. 新增会议预定示例。